Fix sunburst chart on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -96,12 +96,6 @@
     border-radius: 1rem;
 }
 
-.chart--container {
-    min-height: 500px;
-    width: 100%;
-    height: 100%;
-}
-
 /* Targets Extra Small Screens */
 @media screen and (max-width: 575px) {
     .callout-cell {
@@ -117,6 +111,28 @@
         padding-left: 5px;
         padding-right: 5px;
         padding-bottom: 10px;
+    }
+}
+
+.chart--container {
+    height: 100%;
+    width: 100%;
+    min-height: 100vw;
+}
+
+.zc-ref {
+    display:none;
+}
+
+@media screen and (min-width: 768px) {
+    .chart--container {
+        min-height: 75vh;
+    }
+}
+
+@media screen and (min-width: 2048px) {
+    .chart--container {
+        min-height: 50vw;
     }
 }
 
